2006-05-31  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_create_button)
	(gtk_tree_view_column_update_button): Make the alignment expand its
	child to fill the whole allocation and if the child widget isa GtkMisc
	pass on the column xalignment. This lets ellipsizing labels as column
	headers expand and align correctly. #342113, N#31455

2006-05-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_render):
	Do not force ellipsis at end if ellipsis mode already set.
	N#31061

2006-05-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkhbbox.c (gtk_hbutton_box_size_allocate): Ignore the secondary
	property for hererogenous layout. Secondary buttons are treated as
	normal buttons. N#30557

2006-05-21  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtktreeview.c (gtk_tree_view_motion_bin_window): Avoid empty
	selection in single selection mode. Do not unselect all, as selecting
	another row will unselect the old one anyway. 'Reverse drag' also
	makes no sense when the (single-)selection follows stylus.

2006-05-21  Kristian Rietveld  <kris@imendio.com>

	Add support for creating discontinuous selections with the
	stylus.

	* gtk/gtktreeprivate.h: add pen_drag_direction and
	pen_drag_old_selection fields to GtkTreeviewPrivate.

	* gtk/gtktreeview.c (gtk_tree_view_init), (gtk_tree_view_destroy),
	(gtk_tree_view_button_release), (gtk_tree_view_set_model),
	(gtk_tree_view_grab_notify): also free/clear the newly added
	fields of GtkTreeViewPrivate,
	(pen_drag_convert_path_to_row_ref), (pen_drag_was_in_old_selection):
	new helper functions,
	(gtk_tree_view_button_press), (gtk_tree_view_motion_bin_window):
	rework to support discontinuous selections.

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Silence compiler warnings

	* gtk/gtkwidget.c
	* gtk/gtktreemodelfilter.c
	* gtk/gtkwidget.h
	* gtk/gtktextview.c
	* gtk/gtkentry.c